apollo-federation/src/connectors/expand/tests/snapshots/connectors@product_interface.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/product_interface.graphql
---
{
    "products_Query_products_0": Connector {
        id: ConnectId {
            subgraph_name: "products",
            source_name: Some(
                "products-api",
            ),
            named: None,
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Query.products),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
            base_type_name: "Product",
        },
        transport: HttpJsonTransport {
            source_template: Some(
                StringTemplate {
                    parts: [
                        Constant(
                            Constant {
                                value: "https://ecommerce.demo-api.apollo.dev/",
                                location: 0..38,
                            },
                        ),
                    ],
                },
            ),
            connect_template: StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "/products",
                            location: 0..9,
                        },
                    ),
                ],
            },
            method: Get,
            headers: [],
            body: None,
            source_path: None,
            source_query_params: None,
            connect_path: None,
            connect_query_params: None,
        },
        selection: JSONSelection {
            inner: Path(
                PathSelection {
                    path: WithRange {
                        node: Var(
                            WithRange {
                                node: $,
                                range: Some(
                                    0..1,
                                ),
                            },
                            WithRange {
                                node: Key(
                                    WithRange {
                                        node: Field(
                                            "products",
                                        ),
                                        range: Some(
                                            2..10,
                                        ),
                                    },
                                    WithRange {
                                        node: Selection(
                                            SubSelection {
                                                selections: [
                                                    NamedSelection {
                                                        prefix: None,
                                                        path: PathSelection {
                                                            path: WithRange {
                                                                node: Key(
                                                                    WithRange {
                                                                        node: Field(
                                                                            "id",
                                                                        ),
                                                                        range: Some(
                                                                            15..17,
                                                                        ),
                                                                    },
                                                                    WithRange {
                                                                        node: Empty,
                                                                        range: Some(
                                                                            17..17,
                                                                        ),
                                                                    },
                                                                ),
                                                                range: Some(
                                                                    15..17,
                                                                ),
                                                            },
                                                        },
                                                    },
                                                    NamedSelection {
                                                        prefix: None,
                                                        path: PathSelection {
                                                            path: WithRange {
                                                                node: Key(
                                                                    WithRange {
                                                                        node: Field(
                                                                            "name",
                                                                        ),
                                                                        range: Some(
                                                                            18..22,
                                                                        ),
                                                                    },
                                                                    WithRange {
                                                                        node: Empty,
                                                                        range: Some(
                                                                            22..22,
                                                                        ),
                                                                    },
                                                                ),
                                                                range: Some(
                                                                    18..22,
                                                                ),
                                                            },
                                                        },
                                                    },
                                                    NamedSelection {
                                                        prefix: None,
                                                        path: PathSelection {
                                                            path: WithRange {
                                                                node: Key(
                                                                    WithRange {
                                                                        node: Field(
                                                                            "description",
                                                                        ),
                                                                        range: Some(
                                                                            25..36,
                                                                        ),
                                                                    },
                                                                    WithRange {
                                                                        node: Empty,
                                                                        range: Some(
                                                                            36..36,
                                                                        ),
                                                                    },
                                                                ),
                                                                range: Some(
                                                                    25..36,
                                                                ),
                                                            },
                                                        },
                                                    },
                                                ],
                                                range: Some(
                                                    11..76,
                                                ),
                                            },
                                        ),
                                        range: Some(
                                            11..76,
                                        ),
                                    },
                                ),
                                range: Some(
                                    1..76,
                                ),
                            },
                        ),
                        range: Some(
                            0..76,
                        ),
                    },
                },
            ),
            spec: V0_3,
        },
        config: None,
        max_requests: None,
        entity_resolver: None,
        spec: V0_3,
        schema_subtypes_map: {},
        request_headers: {},
        response_headers: {},
        request_variable_keys: {},
        response_variable_keys: {},
        batch_settings: None,
        error_settings: ConnectorErrorsSettings {
            message: None,
            source_extensions: None,
            connect_extensions: None,
            connect_is_success: None,
        },
        label: Label(
            "products.products-api http: GET /products",
        ),
    },
    "products_User_0": Connector {
        id: ConnectId {
            subgraph_name: "products",
            source_name: Some(
                "products-api",
            ),
            named: None,
            directive: Type(
                ObjectTypeDefinitionDirectivePosition {
                    type_name: "User",
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
            base_type_name: "User",
        },
        transport: HttpJsonTransport {
            source_template: Some(
                StringTemplate {
                    parts: [
                        Constant(
                            Constant {
                                value: "https://ecommerce.demo-api.apollo.dev/",
                                location: 0..38,
                            },
                        ),
                    ],
                },
            ),
            connect_template: StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "/users/",
                            location: 0..7,
                        },
                    ),
                    Expression(
                        Expression {
                            expression: JSONSelection {
                                inner: Path(
                                    PathSelection {
                                        path: WithRange {
                                            node: Var(
                                                WithRange {
                                                    node: $this,
                                                    range: Some(
                                                        0..5,
                                                    ),
                                                },
                                                WithRange {
                                                    node: Key(
                                                        WithRange {
                                                            node: Field(
                                                                "id",
                                                            ),
                                                            range: Some(
                                                                6..8,
                                                            ),
                                                        },
                                                        WithRange {
                                                            node: Empty,
                                                            range: Some(
                                                                8..8,
                                                            ),
                                                        },
                                                    ),
                                                    range: Some(
                                                        5..8,
                                                    ),
                                                },
                                            ),
                                            range: Some(
                                                0..8,
                                            ),
                                        },
                                    },
                                ),
                                spec: V0_3,
                            },
                            location: 8..16,
                        },
                    ),
                ],
            },
            method: Get,
            headers: [],
            body: None,
            source_path: None,
            source_query_params: None,
            connect_path: None,
            connect_query_params: None,
        },
        selection: JSONSelection {
            inner: Named(
                SubSelection {
                    selections: [
                        NamedSelection {
                            prefix: None,
                            path: PathSelection {
                                path: WithRange {
                                    node: Key(
                                        WithRange {
                                            node: Field(
                                                "id",
                                            ),
                                            range: Some(
                                                0..2,
                                            ),
                                        },
                                        WithRange {
                                            node: Empty,
                                            range: Some(
                                                2..2,
                                            ),
                                        },
                                    ),
                                    range: Some(
                                        0..2,
                                    ),
                                },
                            },
                        },
                        NamedSelection {
                            prefix: None,
                            path: PathSelection {
                                path: WithRange {
                                    node: Key(
                                        WithRange {
                                            node: Field(
                                                "name",
                                            ),
                                            range: Some(
                                                3..7,
                                            ),
                                        },
                                        WithRange {
                                            node: Empty,
                                            range: Some(
                                                7..7,
                                            ),
                                        },
                                    ),
                                    range: Some(
                                        3..7,
                                    ),
                                },
                            },
                        },
                    ],
                    range: Some(
                        0..7,
                    ),
                },
            ),
            spec: V0_3,
        },
        config: None,
        max_requests: None,
        entity_resolver: Some(
            TypeSingle,
        ),
        spec: V0_3,
        schema_subtypes_map: {},
        request_headers: {},
        response_headers: {},
        request_variable_keys: {
            $this: {
                "id",
            },
        },
        response_variable_keys: {},
        batch_settings: None,
        error_settings: ConnectorErrorsSettings {
            message: None,
            source_extensions: None,
            connect_extensions: None,
            connect_is_success: None,
        },
        label: Label(
            "products.products-api http: GET /users/{$this.id}",
        ),
    },
}
